tests/fixtures/errors/e0405_literal_too_large.mimz
// expect: E0405
module M {
  out y: bits[4]
  y = 300
}
